<?xml version="1.0"?>
<package>
  <name>test2machine</name>
  <version>0.0.1</version>
  <description>The test2machine package</description>

  <maintainer email="snailwoo@snail-labs.com">snailwoo</maintainer>
  <license>BSD</license>
  <url type="website">http://www.snail-labs.com</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>usb_cam</run_depend>
  <run_depend>image_view</run_depend>
</package>